[metadata]
name = pylotus
version = 0.0.1
author = Dmitry Popovich
author_email = dsp@mvdnet.org
description = Python Wrapper for Filecoin Lotus API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tualua/pylotus
project_urls =
    Bug Tracker = https://github.com/Tualua/pylotus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src